# econia-v5

./: CONTRIBUTING.md  LICENSE.md  README.md  TEST_FILE.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: close-stale-issues.yaml  link-checker.yaml  pre-commit.yaml
cfg/: README.md  cspell-config.json  cspell-dictionary.txt  file-name-conventions.yaml  folder-name-conventions.yaml  latexindent-config.yaml  link-check-config.json  markdownlint-config.yaml  pre-commit-config.yaml  yamllint-config.yaml
doc/: architecture-specification.md  architecture.md
src/move/: .gitignore  README.md
src/move/econia/: Move.toml
src/move/econia/sources/: core.move  rational.move  test_assets.move
src/move/research/clmm-reinvesting-decimalized/: .gitignore  curve-translation.tex  main.tex  tangent-style.tex
src/move/research/custom-clmm/: main.tex
src/move/research/novel-clamm/: main.tex
src/move/research/novel-clmm/: main.tex
src/move/research/prover-examples/: Move.toml
src/move/research/red-black-map/: README.md
src/move/research/red_black_map/: Move.toml  (+1 more)
src/python/: .gitignore  file-name-conventions.py
src/python/hooks/: README.md  file-name-conventions.py  file_name_conventions.py  format.py  pyproject.toml  utils.py
src/python/hooks/src/: file-name-conventions.py
src/python/hooks/tests/: test-folder-conventions.yaml  test_name_conventions.py
src/sh/: ensure_shebang.sh  move-source-coverage.sh  pre-commit.sh  update-pre-commit-hooks.sh  watch-move.sh
src/sh/python-lint/: format.sh  poetry-check.sh  run-in-poetry-subdir.sh
(+23 files in other folders)
