# cspell:words isort

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["Econia Labs <developers@econialabs.com>"]
description = ""
name = "econia-sdk"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
